--- a/1 note log/style.css
+++ b/1 note log/style.css
@@ -1,92 +1,86 @@
-* {
-	box-sizing: border-box;
+*{
+    margin: 0;
+    padding: 0;
 }
-
 body {
-	margin: 0;
-	padding: 0;
-	font-family: Arial, sans-serif;
+    background: aliceblue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
-header {
-	background-color: #333;
-	color: #fff;
-	padding: 20px;
-}
-
-header h1 {
-	margin: 0;
-}
-
-main {
-	max-width: 800px;
-	margin: 0 auto;
-	padding: 20px;
-}
-
-section {
-	margin-bottom: 20px;
-}
-
 h2 {
-	margin-top: 0;
+    text-align: center;
+    padding: 20px;
 }
-
+form {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    width: 50%;
+    margin: auto;
+}
+label {
+    padding: 10px;
+}
+input {
+    border-radius: 10px;
+    padding: 10px;
+    margin: 1;
+}
+form button {
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 10px;
+    background: #231955;
+    color: #ccc;
+    cursor: pointer;
+}
+form button:hover {
+    background: rgb(199, 85, 85);
+    color: white;
+}
+/* Output Styling */
+.notes-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    /* width: 70%; */
+}
 ul {
-	list-style: none;
-	padding: 0;
-	margin: 0;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
 }
-
 li {
-	border: 1px solid #ccc;
-	padding: 10px;
-	margin-bottom: 10px;
+    background: white;
+    position: relative;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    box-shadow: 5px 5px 10px #ccc;
+    /* width: 50%; */
+    /* height: 150px; */
+    padding: 25px;
 }
-
-li a {
-	text-decoration: none;
-	color: #333;
-	display: block;
+li:hover {
+    cursor: pointer;
+    box-shadow: 10px 10px 20px #ccc;
 }
-
-li a:hover {
-	background-color: #f5f5f5;
+li h6 {
+    margin: auto;
+    font-size: 22px;
+    padding: 20px;
 }
-
-.metadata {
-	font-style: italic;
-	color: #999;
-	margin-top: 5px;
-	font-size: 0.8em;
+li p {
+    margin: auto;
+    font-size: 16px;
+    padding: 10px;
 }
-
-form label {
-	display: block;
-	margin-top: 10px;
-}
-
-form input[type="text"],
-form textarea,
-form input[type="datetime-local"] {
-	width: 100%;
-	padding: 5px;
-	margin-top: 5px;
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	font-size: 1em;
-}
-
-form button[type="submit"] {
-	margin-top: 10px;
-	background-color: #333;
-	color: #fff;
-	border: none;
-	padding: 10px;
-	font-size: 1em;
-	cursor: pointer;
-}
-
-form button[type="submit"]:hover {
-	background-color: #444;
+li caption {
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
